<resources>
    <string name="app_name">Ilahianz Messenger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="log_in">Log In</string>
    <string name="create_account">Create an Account</string>
    <string name="messenger_by_nightcoders">Ilahianz by NightCoders</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_name_upper">ILAHIANZ</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="other">Other</string>
    <string name="city">City</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_optional">Phone (Optional)</string>
    <string name="other_staff">Other Staff</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="who_you_are">Who you are ?</string>
    <string name="department">Department</string>
    <string name="go_back">Go Back</string>
    <string name="id_no">ID No.</string>
    <string name="scan">Scan</string>
    <string name="verify_you">Verify you</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="photo">PHOTO</string>
    <string name="profile_quotes">A profile helps better identification</string>
    <string name="name">NAME</string>
    <string name="night_coder">Night Coder</string>
    <string name="birthday_upper">BIRTHDAY</string>
    <string name="gender_upper">GENDER</string>
    <string name="city_city">CITY</string>
    <string name="district_upper">DISTRICT</string>
    <string name="department_upper">DEPARTMENT</string>
    <string name="category_upper">CATEGORY</string>
    <string name="id_number">ID NUMBER</string>
    <string name="contact_info">Contact Info</string>
    <string name="email_upper">EMAIL</string>
    <string name="phone_upper">PHONE</string>
    <string name="academic_year_upper">ACADEMIC YEAR</string>
    <string name="name_lower">Name</string>
    <string name="save_upper">SAVE</string>
    <string name="cancel_upper">Cancel</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_quotes">Who can see your personal information</string>
    <string name="profile_privacy">Profile Privacy</string>
    <string name="last_seen">Last Seen</string>
    <string name="location">Location</string>
    <string name="profile_photo">PROFILE PHOTO</string>
    <string name="phone_number_upper">PHONE NUMBER</string>
    <string name="last_seen_upper">LAST SEEN</string>
    <string name="location_upper">LOCATION</string>
    <string name="everyone">Everyone</string>
    <string name="teachers_only">Teachers Only</string>
    <string name="nobody">Nobody</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connection_instruction">
        "You\'re offline check your connection !"
        "\nmake sure your internet connection is turn ON"
    </string>
    <string name="ok">OK</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="sent_verification_to_email">Sent Verification to email</string>
    <string name="email_verification_quoets">
        "You will get a verification mail to your email address.  check your email"
    </string>
    <string name="scan_id_card_request">Scan your id card Barcode</string>
    <string name="staff">Staff</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="departments">Departments</string>
    <string name="skip">Skip</string>
    <string name="ilahianz_by_nightcoders">Ilahianz By NightCoders</string>
    <string name="search_an_ilahian">Search an Ilahian</string>
    <string name="ilahianz">Ilahianz</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="to">To</string>
    <string name="yyyy">YYYY</string>
    <string name="academic_year">Academic Year</string>
    <string name="academic_info">Academic</string>
    <string name="academic_information_quotes">Academic information</string>
    <string name="nickname_upper">NICKNAME</string>
    <string name="bio_upper">BIO</string>
    <string name="blood_donation_profile">Blood Donation Group</string>
    <string name="participate">Participate</string>
    <string name="instructions">Instructions</string>
    <string name="blood_group">Blood Group</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="blood_instruction">I don\'t have any decease like HIV, AIDS</string>
    <string name="age">Age</string>
    <string name="o">O</string>
    <string name="policy_blood_donation">
        "We will not share your personal information to others"\n
        "Anyone need blood same as your blood group then we'll notify you"\n
        "No one can directly contact the blood donor"\n
        "Donate Blood Donate Life"
    </string>
    <string name="loading">Loading…</string>
    <string name="leave_confirmation">Are you sure you want to leave ?</string>
    <string name="leave">Leave</string>
    <string name="log_out">Log Out</string>
    <string name="developer_caution">
        "Application need to re-load for initialize the contents \n"
        close and re-open the application\n Happy Chatting</string>
    <string name="close">Close</string>
    <string name="caution">Caution</string>
    <string name="log_in_error">Log In Error</string>
    <string name="try_again">Try Again</string>
    <string name="save">Save</string>
    <string name="type_message">Type Message…</string>
    <string name="username">Username</string>
    <string name="online">Online</string>
    <string name="active">Active</string>
    <string name="info">Info</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="bca">Bachelor of Computer Applications (BCA)</string>
    <string name="basic_info">Basic Info</string>
    <string name="blood_donation_console">Blood Donation Console</string>
    <string name="blood_donation_banner_quotes">
        "With Ilahianz, You can donate your blood."
        "Open the blood donation console and join Ilahianz blood donation group"
        " or visit console for blood requests :)"
    </string>
    <string name="ideas_quotes">
        "Share your Ideas, Thoughts, Suggestions with Ilahianz."
        "Also you can Support others Ideas and help to become their Dreams True."
        " or Suggest new Things for their ideas :)"
    </string>
    <string name="notice_quotes">
        "Noticeboard is a surface intended for the posting of public Messages"
        "Display notice giving information about something. Like exam notice, result notice, etc…"
    </string>
    <string name="feedback_quotes">
        "Send feedback to the developer and also you can suggest new ideas for this platform"
        "We make it possible soon. Thanks :)"
    </string>
    <string name="notice_instruction">
        Notices are a means of formal communication targeted at a particular person or a group of persons.\n
        It is like a news item informing such person or persons of some important event. \n
        This can be an invitation to a meeting, an announcement of any event, to issue certain instructions, make appeals etc.\n
        Note: This Notice responsible to you.
    </string>
    <string name="remove_photo">Remove Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notice_board">Notice Board</string>
    <string name="all">All</string>
    <string name="thanks">Thanks</string>
    <string name="comment">Comment</string>
    <string name="reply">Reply</string>
    <string name="compose_notice">Compose Notice</string>
    <string name="write_something">Write Something…</string>
    <string name="attach_file">Attach File</string>
    <string name="this_notice_for">This Notice for</string>
    <string name="target_to_a_department">Target to a Department</string>
    <string name="subject">Subject</string>
    <string name="attachment_not_found">Attachment not found</string>
    <string name="write_comment">Write Comment…</string>
    <string name="starred_notices">Starred Notices</string>
    <string name="share">Share</string>

</resources>
