<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/material_dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/no_internet_connection"
        android:textColor="@color/blue_dark"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:text="@string/connection_instruction"
        android:textSize="17sp" />

    <Button
        android:id="@+id/ok_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/ok"
        android:textColor="@color/blue_dark" />

</LinearLayout>